# cleanmail

./: Cargo.toml  Dockerfile  build-docker.sh  run-docker.sh
src/: main.rs
